syntax = "proto2";

import 'ostorlab/agent/message/proto/v3/asset/domain_name/domain_name.proto';
import 'ostorlab/agent/message/proto/v3/asset/ip/v4/v4.proto';
import 'ostorlab/agent/message/proto/v3/asset/ip/v6/v6.proto';
import 'ostorlab/agent/message/proto/v3/asset/link/link.proto';
import 'ostorlab/agent/message/proto/v3/asset/store/android_store/android_store.proto';
import 'ostorlab/agent/message/proto/v3/asset/store/ios_store/ios_store.proto';
import 'ostorlab/agent/message/proto/v3/asset/file/file.proto';
import 'ostorlab/agent/message/proto/v3/asset/file/android/aab/aab.proto';
import 'ostorlab/agent/message/proto/v3/asset/file/android/apk/apk.proto';
import 'ostorlab/agent/message/proto/v3/asset/file/ios/ipa/ipa.proto';

package ostorlab.agent.message.proto.v3.report.risk;

message Message{
  oneof asset {
    ostorlab.agent.message.proto.v3.asset.domain_name.Message domain_name = 1;
    ostorlab.agent.message.proto.v3.asset.ip.v4.Message ipv4 = 2;
    ostorlab.agent.message.proto.v3.asset.ip.v6.Message ipv6 = 3;
    ostorlab.agent.message.proto.v3.asset.link.Message link = 4;
    ostorlab.agent.message.proto.v3.asset.store.android_store.Message android_store = 5;
    ostorlab.agent.message.proto.v3.asset.store.ios_store.Message ios_store = 6;
    ostorlab.agent.message.proto.v3.asset.file.Message file = 7;
    ostorlab.agent.message.proto.v3.asset.file.android.aab.Message android_aab = 8;
    ostorlab.agent.message.proto.v3.asset.file.android.apk.Message android_apk = 9;
    ostorlab.agent.message.proto.v3.asset.file.ios.ipa.Message ios_ipa = 10;
  }
  required string description = 11;
  required string rating = 12;
}
